--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Card</title>
+    <title>Instant Meeting Attendance: Generate Your QR Code!</title>
+    <meta name="description" content="Join meetings hassle-free! Enter your member ID to get your profile and download your unique QR code for seamless attendance.">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="512x512" href="favicon_io/android-chrome-512x512.png">
     <link rel="icon" type="image/png" sizes="192x192" href="favicon_io/android-chrome-192x192.png">
@@ -13,213 +14,7 @@
     <link rel="manifest" href="favicon_io/site.webmanifest">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet" />
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            margin: 0;
-            background-color: #e0d4f7;
-            font-family: 'Nunito', sans-serif;
-            height: 98vh;
-            padding-top: 40px;
-            position: relative;
-            /* Ensure body takes full height */
-            min-height: 98vh;
-        }
-
-        @media (min-width: 1024px) {
-            body{
-                height: 90vh;
-                min-height:90vh ;
-            }
-            .custom-height {
-                height: 145vh;
-                min-height: 145vh;
-            }
-        }
-
-        .content {
-            flex: 1;
-            /* Allow the content area to grow and take available space */
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .loader {
-            display: none;
-            position: relative;
-            height: 32px;
-            width: 150px;
-            box-sizing: border-box;
-            overflow: hidden;
-            border: 2px solid #FFF;
-            border-radius: 20px;
-        }
-
-        .loader:before {
-            content: '';
-            position: absolute;
-            left: 0;
-            bottom: 2px;
-            width: 24px;
-            height: 24px;
-            border-radius: 50%;
-            background: #3b3b98;
-            animation: ballbns 3s ease-in-out infinite;
-        }
-
-        @keyframes ballbns {
-            0% {
-                left: 0;
-                transform: translateX(0%);
-                box-shadow:
-                    -5px 0 0 -1px rgba(59, 59, 152, 0.9),
-                    -10px 0 0 -2px rgba(59, 59, 152, 0.8),
-                    -15px 0 0 -4px rgba(59, 59, 152, 0.6),
-                    -20px 0 0 -6px rgba(59, 59, 152, 0.4),
-                    -25px 0 0 -8px rgba(59, 59, 152, 0.2);
-            }
-
-            49% {
-                left: 100%;
-                transform: translateX(-100%);
-                box-shadow:
-                    -5px 0 0 -1px rgba(59, 59, 152, 0.9),
-                    -10px 0 0 -2px rgba(59, 59, 152, 0.8),
-                    -15px 0 0 -4px rgba(59, 59, 152, 0.6),
-                    -20px 0 0 -6px rgba(59, 59, 152, 0.4),
-                    -25px 0 0 -8px rgba(59, 59, 152, 0.2);
-            }
-
-            51% {
-                left: 100%;
-                transform: translateX(-100%);
-                box-shadow:
-                    5px 0 0 -1px rgba(59, 59, 152, 0.9),
-                    10px 0 0 -2px rgba(59, 59, 152, 0.8),
-                    15px 0 0 -4px rgba(59, 59, 152, 0.6),
-                    20px 0 0 -6px rgba(59, 59, 152, 0.4),
-                    25px 0 0 -8px rgba(59, 59, 152, 0.2);
-            }
-
-            100% {
-                left: 0;
-                transform: translateX(0%);
-                box-shadow:
-                    5px 0 0 -1px rgba(59, 59, 152, 0.9),
-                    10px 0 0 -2px rgba(59, 59, 152, 0.8),
-                    15px 0 0 -4px rgba(59, 59, 152, 0.6),
-                    20px 0 0 -6px rgba(59, 59, 152, 0.4),
-                    25px 0 0 -8px rgba(59, 59, 152, 0.2);
-            }
-        }
-
-        .card {
-            background-color: #fff;
-            border-radius: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            text-align: center;
-            width: 300px;
-            position: relative;
-            margin: 20px 0;
-        }
-
-        .card img {
-            border-radius: 50%;
-            width: 100px;
-            height: 100px;
-            object-fit: cover;
-            border: 5px solid #fff;
-            margin-top: -50px;
-        }
-
-        .card h2 {
-            font-size: 24px;
-            margin: 10px 0 5px;
-            color: #333;
-        }
-
-        .card h3 {
-            font-size: 18px;
-            margin: 5px 0;
-            color: #777;
-        }
-
-        .card p {
-            font-size: 14px;
-            color: #555;
-            margin: 10px 0 20px;
-        }
-
-        .card .contact {
-            display: inline-block;
-            background-color: #3b3b98;
-            color: #fff;
-            padding: 10px 20px;
-            border-radius: 20px;
-            text-decoration: none;
-            font-size: 14px;
-        }
-
-        .card .logo {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            background-color: #3b3b98;
-            color: #fff;
-            border-radius: 50%;
-            width: 30px;
-            height: 30px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 18px;
-        }
-
-        .card .button {
-            display: inline-block;
-            background-color: #3b3b98;
-            color: #fff;
-            padding: 10px 20px;
-            border-radius: 20px;
-            text-decoration: none;
-            font-size: 14px;
-            margin-top: 20px;
-        }
-
-        .card .qrcode {
-            width: 200px;
-            height: 200px;
-            margin-top: 8px;
-        }
-
-        .card .input-field {
-            width: 80%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 20px;
-            font-size: 14px;
-        }
-
-        footer {
-            text-align: center;
-            margin-top: 20px;
-            font-size: 12px;
-            color: #3b3b98;
-            background-color: #f9f9f9;
-            border-top: 1px solid #ddd;
-            padding: 10px;
-            border-radius: 0 0 20px 20px;
-            width: 100%;
-            /* Ensure footer takes full width */
-        }
-    </style>
+   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -227,7 +22,7 @@
         <span class="loader" id="loader"></span>
 
         <div class="card" id="card-id-input">
-            <h2>Enter Your ID</h2>
+            <h2>Enter Your Monile Number</h2>
             <input class="input-field" id="input-id" type="text" placeholder="Enter your ID" />
             <a class="button" id="submit-button" href="#">Enter</a>
             <div class="error" id="error"></div>
