--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span class="loader" id="loader"></span>
 
         <div class="card" id="card-id-input">
-            <h2>Enter Your Monile Number</h2>
+            <h2>Enter Your Mobile Number</h2>
             <input class="input-field" id="input-id" type="text" placeholder="Enter your ID" />
             <a class="button" id="submit-button" href="#">Enter</a>
             <div class="error" id="error"></div>
