--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
 </head>
 
 <body>
+    <div class="guide-link">
+        <p>
+            <a href="user_guide.html" class="guide-text">User Guide</a>
+        </p>
+    </div>
+    
     <div class="content">
         <span class="loader" id="loader"></span>
-
+        
         <div class="card" id="card-id-input">
             <h2>Enter Your Mobile Number</h2>
-            <input class="input-field" id="input-id" type="text" placeholder="Enter your ID" />
+            <input class="input-field" id="input-id" type="text" placeholder="Enter your Mobile Number" />
             <a class="button" id="submit-button" href="#">Enter</a>
             <div class="error" id="error"></div>
         </div>
